# DynamicDNS-Cloudflare

./: DynamicDNS.cabal  README.md  cloudflare.dns
app/: Configuration.hs  DNSAPI.hs  Main.hs
